# get-signature-png

./: .gitignore  CLAUDE.md  README.md  start-lan.sh
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: enhance.py  stamp.py
backend/app/services/: ai_remover.py  color_filter.py  enhancer.py  extractor.py  super_resolution.py  task_manager.py  text_remover.py
backend/app/utils/: file_utils.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: EnhancePanel.tsx  ImagePreview.tsx  ResultView.tsx  SettingsPanel.tsx  StampPanel.tsx  UploadZone.tsx
frontend/src/hooks/: useImageEnhance.ts  useStampExtract.ts
frontend/src/types/: index.ts
frontend/src/utils/: download.ts
specs/: design.md  implementation-plan.md  requirement-analysis.md
